# agentic-ai-doc-review

./: .env.example  .gitignore  README.md  body.json  docker-compose.yml  pyproject.toml
scripts/: generate_test_docs.py  seed_prompts.py
src/ediscovery/: config.py  database.py  llm_client.py  main.py
src/ediscovery/agents/: __init__.py  base.py  orchestrator.py  registry.py
src/ediscovery/agents/entity_extraction/: __init__.py  worker.py
src/ediscovery/agents/relevancy/: __init__.py  worker.py
src/ediscovery/api/: jobs.py  results.py
src/ediscovery/models/: __init__.py  job.py  prompt.py  result.py
src/ediscovery/services/: document_service.py  job_service.py  prompt_service.py
src/review/: config.py  database.py  llm_client.py  main.py
src/review/agents/: orchestrator.py  registry.py
src/review/agents/entity_extraction/: __init__.py  prompts.py  worker.py
src/review/agents/relevancy/: __init__.py  prompts.py  worker.py
src/review/api/: jobs.py  results.py
src/review/extraction/: __init__.py  extractor.py
src/review/models/: __init__.py  job.py  prompt.py  result.py
src/review/schemas/: document.py  job.py  result.py
src/review/services/: document_service.py  job_service.py  prompt_service.py
