[project]
name = "review"
version = "0.1.0"
description = "Domain-agnostic agentic AI system for document relevance review"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pymysql[rsa]>=1.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.60",
    "python-multipart>=0.0.18",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "alembic>=1.14",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["review"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
